--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style type="text/css">
+    	.good { background-color: #0C0;}
+    	.moderate { background-color: #FFFF00;}
+    	.usg { background-color: #FF9900;}
+    	.unhealthy { background-color: #FF0000;}
+    	.veryunhealthy { background-color: #990066;}
+    	.hazardous { background-color: #660000;}
+    </style>
   </head>
   <body>
 
