--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -7,6 +7,10 @@
 
 <br/>
 
+{% if zipcode %}
+	{{ zipcode }}
+{% endif %}
+
 {% if api %}
 	{% if api == "Error..." %}
 		There was an error, please try again
